[package]
name = "chat-mio"
version = "0.1.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]
edition = "2018"

[dependencies]
mio = "0.6"

bytes = "0.4"
http = "0.1"
path-tree = "0.1"
lazy_static = "1"
qstring = "0.7"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

nom = "4"

